2005-04-22  Christian Persch  <chpe@cvs.gnome.org>

	* src/Writer.cpp:

	Fix thumbnail aspect ratio.

2005-04-21  Christian Persch  <chpe@cvs.gnome.org>

	* Initial import to cvs.