@@ -39,6 +39,7 @@ gnome_web_photo_LDFLAGS = -R$(MOZILLA_HOME)
 gnome_web_photo_LDADD = \
 	$(DEPENDENCY_LIBS)	\
 	$(MOZILLA_LIBS)		\
+	$(JPEG_LIBS)		\
 	$(AM_LDFLAGS)
 
 # -- Thumbnailer --------------------------------------------------------------
@@ -68,4 +69,5 @@ gnome_web_thumbnail_LDFLAGS = -R$(MOZILLA_HOME)
 gnome_web_thumbnail_LDADD = \
 	$(DEPENDENCY_LIBS)	\
 	$(MOZILLA_LIBS)		\
+	$(JPEG_LIBS)		\
 	$(AM_LDFLAGS)
