@@ -1,3 +1,13 @@
+2005-04-23  Christian Persch  <chpe@cvs.gnome.org>
+
+	* configure.ac:
+	* src/Makefile.am:
+	* src/Writer.cpp:
+	* src/Writer.h:
+	* src/main.cpp:
+
+	Add JPEG as optional output file format.
+
 2005-04-22  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/Writer.cpp:
